Se agrego texto en el carrusel

--- a/css/style.css
+++ b/css/style.css
@@ -78,11 +78,12 @@ transition: all .4s ease;
 }
 
 #footer.container {
+	padding-bottom: 50px;
 background: transparent;
 }
 
 .carousel-caption {
-
+	text-align: left;
 bottom: 130px;
 
 }
