--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ width: 138px;
 background: url('../img/inicio/logo.png') no-repeat;
 margin-top: 25px;
 background-size: 100%;
+display: block;
 }
 
 #main-container {
